Icons: Added paragraph-left3
(integrated from the KomodoIDE master branch change 4e99f86467 by Nathan Rijksen <n.rijksen@gmail.com>)

https://github.com/Komodo/KomodoIDE/commit/4e99f86467

--- a/src/chrome/komodo/skin/global/icons/style.less
+++ b/src/chrome/komodo/skin/global/icons/style.less
@@ -2,11 +2,11 @@
 
 @font-face {
   font-family: 'icomoon';
-  src:  url('chrome://komodo/skin/global/icons/fonts/icomoon.eot?ryoi8a');
-  src:  url('chrome://komodo/skin/global/icons/fonts/icomoon.eot?ryoi8a#iefix') format('embedded-opentype'),
-    url('chrome://komodo/skin/global/icons/fonts/icomoon.ttf?ryoi8a') format('truetype'),
-    url('chrome://komodo/skin/global/icons/fonts/icomoon.woff?ryoi8a') format('woff'),
-    url('chrome://komodo/skin/global/icons/fonts/icomoon.svg?ryoi8a#icomoon') format('svg');
+  src:  url('chrome://komodo/skin/global/icons/fonts/icomoon.eot?grzdlw');
+  src:  url('chrome://komodo/skin/global/icons/fonts/icomoon.eot?grzdlw#iefix') format('embedded-opentype'),
+    url('chrome://komodo/skin/global/icons/fonts/icomoon.ttf?grzdlw') format('truetype'),
+    url('chrome://komodo/skin/global/icons/fonts/icomoon.woff?grzdlw') format('woff'),
+    url('chrome://komodo/skin/global/icons/fonts/icomoon.svg?grzdlw#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -344,6 +344,11 @@
 .icon-trophy4 {
   &:before {
     content: @icon-trophy4;
+  }
+}
+.icon-paragraph-left3 {
+  &:before {
+    content: @icon-paragraph-left3;
   }
 }
 .icon-yarn {
