--- a/src/chrome/komodo/skin/global/icons/variables.less
+++ b/src/chrome/komodo/skin/global/icons/variables.less
@@ -64,6 +64,7 @@
 @icon-eye3: "\ecb4";
 @icon-scc: "\ef46";
 @icon-trophy4: "\ebab";
+@icon-paragraph-left3: "\eec1";
 @icon-yarn: "\e908";
 @icon-cordova: "\e903";
 @icon-phonegap: "\e904";
