UI: Fix calltips not having a background
(integrated from the KomodoIDE master branch change ff3528ac67 by Nathan Rijksen <n.rijksen@gmail.com>)

https://github.com/Komodo/KomodoIDE/commit/ff3528ac67

--- a/src/chrome/komodo/skin/global/normalize.less
+++ b/src/chrome/komodo/skin/global/normalize.less
@@ -760,7 +760,8 @@ button[type="checkbox"][checked="true"]
 /* Modals */
 
 :root:not(#komodo_main):not(page),
-panel.dialog
+panel.dialog,
+tooltip.dialog
 {
     &:not(.embedded)
     {
