UX: Added a version check window, which will notify people if a new major version of Komodo is available
rn=

(integrated from the KomodoIDE 10.2.x branch change a0c090bb66 by Nathan Rijksen <n.rijksen@gmail.com>)

https://github.com/Komodo/KomodoIDE/commit/a0c090bb66

--- a/src/chrome/komodo/skin/global/_scrollbars.less
+++ b/src/chrome/komodo/skin/global/_scrollbars.less
@@ -56,6 +56,40 @@ scrollbar
     }
 }
 
+
+.native-scrollbars
+{
+    scrollbar
+    {
+        -moz-appearance: scrollbar !important;
+        margin: inherit !important;
+        min-width: inherit !important;
+        min-height: inherit !important;
+
+        slider
+        {
+            -moz-appearance: scrollbartrack-horizontal !important;
+        }
+
+        slider[orient="vertical"]
+        {
+            -moz-appearance: scrollbartrack-vertical !important;
+        }
+
+
+        thumb
+        {
+            -moz-appearance: scrollbarthumb-horizontal !important;
+            background: inherit !important;
+        }
+
+        thumb[orient="vertical"]
+        {
+            -moz-appearance: scrollbarthumb-vertical !important;
+        }
+    }
+}
+
 /* Modals */
 
 dialog, :root.dialog, :root.pref-window, .widgetToolbarWrap
