Commando: Fix text getting cut off - fixes #2707
(integrated from the KomodoIDE master branch change fc0903183d by Nathan Rijksen <n.rijksen@gmail.com>)

https://github.com/Komodo/KomodoIDE/commit/fc0903183d

--- a/src/modules/commando/skin/commando.less
+++ b/src/modules/commando/skin/commando.less
@@ -300,6 +300,7 @@
                 {
                     max-width: 375px;
                     overflow: hidden;
+                    padding: 1px 0; /* Fixes strange artifacts when letters exceed container heigh */
                 }
 
                 spacer
