Project wizard: Add "run command" explanation - fixes #2570
(integrated from the KomodoIDE master branch change 097a5c8e30 by Nathan Rijksen <n.rijksen@gmail.com>)

https://github.com/Komodo/KomodoIDE/commit/097a5c8e30

--- a/src/chrome/komodo/skin/global/normalize.less
+++ b/src/chrome/komodo/skin/global/normalize.less
@@ -1019,6 +1019,11 @@ window.embedded.widget
     .ui-description:not(.fullwidth)
     {
         margin-left: 104px;
+
+        &.ui-description
+        {
+          width: 400px; /* required or else the text will take as much width as it needs without wrapping */
+        }
     }
     
     .ui-textbox,
