SDK: List: Turn list into pure XUL element - fixes #2785
(integrated from the KomodoIDE master branch change e86042d1d7 by Nathan Rijksen <n.rijksen@gmail.com>)

https://github.com/Komodo/KomodoIDE/commit/e86042d1d7

--- a/src/chrome/komodo/skin/global/normalize.less
+++ b/src/chrome/komodo/skin/global/normalize.less
@@ -1056,5 +1056,20 @@ window.embedded.widget
     {
         margin-top: 4px;
     }
-    
+
+}
+
+.ui-list
+{
+  padding-left: 2rem;
+  margin: 0.5rem 0;
+  -moz-box-flex: 1;
+
+  & > .ui-hbox
+  {
+      padding: 0.2rem 0;
+      display: list-item;
+      list-style-type: disc;
+      list-style-position: inside;
+  }
 }
