UI: Make label widths a specific size, rather than proportionate
(integrated from the KomodoIDE master branch change 84c0a58ce2 by Nathan Rijksen <n.rijksen@gmail.com>)

https://github.com/Komodo/KomodoIDE/commit/84c0a58ce2

--- a/src/chrome/komodo/skin/global/wizard.less
+++ b/src/chrome/komodo/skin/global/wizard.less
@@ -16,13 +16,13 @@
     
     wizardpage .ui-label:not(.fullwidth)
     {
-        width: 30vw;
+        width: 150px;
         text-align: right;
     }
     
     wizardpage .ui-checkbox:not(.fullwidth)
     {
-        margin-left: 30vw;
+        margin-left: 150px;
     }
     
     view
