UI: Always set foreground color for tooltips - fixes #2907
(integrated from the KomodoIDE master branch change c6fea0ed84 by Nathan Rijksen <n.rijksen@gmail.com>)

https://github.com/Komodo/KomodoIDE/commit/c6fea0ed84

--- a/src/chrome/komodo/skin/global/global.less
+++ b/src/chrome/komodo/skin/global/global.less
@@ -94,8 +94,13 @@
 
 /* HUD elements */
 
-.hud, #editorTooltip
+.hud, #editorTooltip, tooltip;
 {
+    &, label, description
+    {
+        color: @foreground;
+    }
+
     background: @contrast;
 }
 
