--- a/src/modules/breadcrumbs/skin/breadcrumbs.less
+++ b/src/modules/breadcrumbs/skin/breadcrumbs.less
@@ -22,6 +22,17 @@
             {
                 margin-right: 2px;
             }
+
+            .breadcrumb-icon
+            {
+                background: url("koicon://ko-svg/chrome/komodo/skin/images/folder_closed.svg?size=14&scheme-name=interface&scheme-color=icons");
+                background-repeat: no-repeat;
+                background-size: 14px 14px;
+                width: 14px;
+                height: 14px;
+                margin-top: -2px;
+                opacity: 0.6;
+            }
             
             .toolbarbutton-icon
             {
