dynamic buttons: menupopup spans entire screen. Fixes #3405. rn=
(integrated from the KomodoIDE master branch change 7470701 by Carey Hoffman <cgchoffman@gmail.com>)

https://github.com/Komodo/KomodoIDE/commit/7470701

--- a/src/chrome/komodo/skin/global/main.less
+++ b/src/chrome/komodo/skin/global/main.less
@@ -393,6 +393,12 @@
     .dynamic-button.warning label.toolbarbutton-counter { background: @state-warning; }
     .dynamic-button.info label.toolbarbutton-counter { background: @state-info; }
     .dynamic-button.ok label.toolbarbutton-counter { background: @state-ok; }
+    
+    // Set a max width for all dynamic menupopups
+    menupopup
+    {
+        max-width: 320px;
+    }
 }
 
 /* Statusbar */
